[package]
name = "loosen"
version = "0.1.1"
authors = ["Thiago <swfsql@gmail.com>"]
license = "MIT"
description = "Derives a wrapper function which loosen the arguments into a tuple."
repository = "https://github.com/swfsql/loosen"
keywords = ["tuple", "argument", "flatten", "loose"]
readme = "README.md"
edition = "2018"
documentation = "https://docs.rs/loosen/0.1.0/loosen/"

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15.30", features = ["full"] } 
quote = "0.6.11"

